fix: fixing numbers format to pt-br, the spacing between the icon and description on item list and adding the button for add cards and balance.

--- a/src/components/QuickAccess/style.css
+++ b/src/components/QuickAccess/style.css
@@ -1,7 +1,7 @@
 .acesso-rapido-card {
   width: 18.75rem;
   max-height: 30.7vh;
-  max-width: 22rem;
+  width: 22vw;
   background-color: white;
   border-radius: 0.75rem;
   text-align: center;
@@ -11,6 +11,7 @@
 .botoes-container {
   display: flex;
   justify-content: space-around;
+  width: 20vw;
   margin-top: 1.25rem;
 }
 
